--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -3,11 +3,14 @@
         <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]">
             <!-- ^^^ Empty spacer on non-mobile -->
         </div>
-        <div class="pointer-events-none w-fit font-roboto text-6xl uppercase leading-none tracking-tight text-gray-200 md:text-[7rem]">
-            Brotherland
+        <div class="pointer-events-none w-fit font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 md:text-[7rem]">
+            <div class="pt-1 {{ active === '/' ? 'hidden' : 'block' }}">Brotherland</div>
+            <div class="pt-12 {{ active === '/' ? 'block' : 'hidden' }}">
+                <span class="block text-8xl">Brother</span><span class="block text-8xl">land</span>
+            </div>
         </div>
         <!-- Hamburger Menu -->
-        <div class="absolute right-0 top-0 flex aspect-square h-full px-2 md:hidden">
+        <div class="absolute right-0 top-0 flex aspect-square h-14 px-2 md:hidden">
             <input id="hamburger-menu-checkbox" type="checkbox" class="hidden" />
             <label
                 id="hamburger-menu-label"
