--- a/src/partials/interview_audio.html
+++ b/src/partials/interview_audio.html
@@ -1,7 +1,9 @@
-<div class="flex flex-col w-full rounded-sm bg-black px-2 py-4">
+<div class="mb-2 flex w-full flex-col rounded-sm bg-black px-2 py-4 md:mb-0">
     <audio controls class="w-full bg-none">
         <source src="{{ audioFilePath }}" type="audio/mpeg" title="{{ title }}" />
         Your system can't play audio, it seems!
     </audio>
-    <div class="text-base font-medium font-crimson-text text-center italic pt-2 tracking-wide -mb-2 w-full text-gray-300">{{ title  &&  title  }}</div>
+    <div class="-mb-2 w-full pt-2 text-center font-crimson-text text-base font-medium italic tracking-wide text-gray-300">
+        {{ title && title }}
+    </div>
 </div>
