--- a/src/partials/interview_text.html
+++ b/src/partials/interview_text.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-start justify-between">
-    <div class="mt-0 whitespace-pre-line text-justify md:mt-10">
+    <div class="mt-0 whitespace-pre-line text-left md:mt-10">
         <each loop="item, index in main">
             <p class="font-crimson-text text-lg font-semibold text-gray-950">{{ item }}</p>
         </each>
