--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -3,10 +3,13 @@
         <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]">
             <!-- ^^^ Empty spacer on non-mobile -->
         </div>
-        <div class="pointer-events-none w-fit font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 md:text-[7rem]">
+        <div class="pointer-events-none w-full font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 md:text-[7rem]">
             <div class="pt-1 {{ active === '/' ? 'hidden' : 'block' }}">Brotherland</div>
             <div class="pt-12 {{ active === '/' ? 'block' : 'hidden' }}">
-                <span class="block text-8xl">Brother</span><span class="block text-8xl">land</span>
+                <svg class="fill-gray-200" preserveAspectRatio="none" width="100%" height="100%" viewBox="0 0 210 100">
+                    <text x="0" y="48">BROTHER</text>
+                    <text x="0" y="96">LAND</text>
+                </svg>
             </div>
         </div>
         <!-- Hamburger Menu -->
