--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -3,17 +3,39 @@
         <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]">
             <!-- ^^^ Empty spacer on non-mobile -->
         </div>
-        <div class="pointer-events-none w-full font-roboto text-5xl uppercase leading-none tracking-tight text-gray-200 md:text-[7rem]">
-            <div class="pt-1 {{ active === '/' ? 'hidden' : 'block' }}">Brotherland</div>
-            <div class="pt-12 {{ active === '/' ? 'block' : 'hidden' }}">
-                <svg class="fill-gray-200" preserveAspectRatio="none" width="100%" height="100%" viewBox="0 0 210 100">
-                    <text x="0" y="48">BROTHER</text>
-                    <text x="0" y="96">LAND</text>
+        <div class="pointer-events-none w-full">
+            <!-- Text in Desktop Navbar: -->
+            <div class="hidden font-roboto uppercase leading-none tracking-tight text-gray-200 md:block md:text-[7rem]">Brotherland</div>
+
+            <!-- Text in Mobile Navbar: -->
+            <div class="block md:hidden">
+                <!-- Home: -->
+                <svg
+                    class="fill-gray-800 {{ active === '/' ? 'block' : 'hidden' }}"
+                    preserveAspectRatio="none"
+                    width="100%"
+                    height="100%"
+                    viewBox="0 0 72 38"
+                >
+                    <text x="0" y="20" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHER</text>
+                    <text x="0" y="35" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">LAND</text>
+                </svg>
+                <!-- Everywhere else: -->
+                <svg
+                    class="fill-gray-200 {{ active === '/' ? 'hidden' : 'block' }}"
+                    preserveAspectRatio="none"
+                    width="100%"
+                    height="100%"
+                    viewBox="0 0 130 20"
+                >
+                    <text x="0" y="15.5" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHERLAND</text>
                 </svg>
             </div>
         </div>
         <!-- Hamburger Menu -->
-        <div class="absolute right-0 top-0 flex aspect-square h-14 px-2 md:hidden">
+        <div
+            class="absolute right-0 top-0 flex items-center justify-center aspect-square md:hidden {{ active === '/' ? 'h-14' : 'h-full' }}"
+        >
             <input id="hamburger-menu-checkbox" type="checkbox" class="hidden" />
             <label
                 id="hamburger-menu-label"
@@ -22,11 +44,11 @@
             >
             </label>
 
-            <div id="hamburger-menu-lines" class="z-40 flex h-full w-full flex-col justify-center">
+            <div id="hamburger-menu-lines" class="z-40 flex h-full w-full flex-col justify-center px-2">
                 <div class="flex h-2/3 flex-col justify-evenly">
-                    <div class="h-[8%] rounded-sm bg-black/50"></div>
-                    <div class="h-[8%] rounded-sm bg-black/50"></div>
-                    <div class="h-[8%] rounded-sm bg-black/50"></div>
+                    <div class="h-[9%] rounded-sm bg-black/50"></div>
+                    <div class="h-[9%] rounded-sm bg-black/50"></div>
+                    <div class="h-[9%] rounded-sm bg-black/50"></div>
                 </div>
             </div>
 
