--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,17 +1,18 @@
-<div class="h-full w-full">
+<nav class="h-full w-full">
     <div class="relative flex h-full w-full flex-nowrap justify-between sm:justify-start">
-        <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]">
-            <!-- ^^^ Empty spacer on non-mobile -->
-        </div>
+        <!-- Empty spacer on desktop: -->
+        <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
+
+        <!-- "Brotherland" Text: -->
         <div class="pointer-events-none w-full">
             <!-- Text in Desktop Navbar: -->
             <div class="hidden font-roboto uppercase leading-none tracking-tight text-gray-200 md:block md:text-[7rem]">Brotherland</div>
 
             <!-- Text in Mobile Navbar: -->
             <div class="block md:hidden">
-                <!-- Home: -->
+                <!-- Home / index.html: -->
                 <svg
-                    class="fill-gray-800 {{ active === '/' ? 'block' : 'hidden' }}"
+                    class="fill-gray-800 pt-6 {{ active === '/' ? 'block' : 'hidden' }}"
                     preserveAspectRatio="none"
                     width="100%"
                     height="100%"
@@ -32,10 +33,9 @@
                 </svg>
             </div>
         </div>
-        <!-- Hamburger Menu -->
-        <div
-            class="absolute right-0 top-0 flex items-center justify-center aspect-square md:hidden {{ active === '/' ? 'h-14' : 'h-full' }}"
-        >
+
+        <!-- Hamburger/Mobile Menu -->
+        <div class="absolute right-0 top-0 flex items-center justify-center aspect-square md:hidden {{ active === '/' ? 'h-14' : 'h-14' }}">
             <input id="hamburger-menu-checkbox" type="checkbox" class="hidden" />
             <label
                 id="hamburger-menu-label"
@@ -235,4 +235,4 @@
             </div>
         </div>
     </div>
-</div>
+</nav>
