--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -12,7 +12,7 @@
             <div class="block md:hidden">
                 <!-- Home / index.html: -->
                 <svg
-                    class="fill-gray-800 pt-6 {{ active === '/' ? 'block' : 'hidden' }}"
+                    class="fill-[rgb(51,_51,_51)] pt-6 {{ active === '/' ? 'block' : 'hidden' }}"
                     preserveAspectRatio="none"
                     width="100%"
                     height="100%"
