--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,5 +1,4 @@
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="{{ pathHeadPrefix }}css/main.css" />
 <title>{{pageTitle}}</title>
 <script src="{{ pathHeadPrefix }}js/script.js" type="module"></script>
