language switching via bruteforce, removed old js calls

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -159,77 +159,12 @@
                             </div>
                         </a>
 
-                        <a href="{{ pathPrefix }}/english.html" alt="English">
-                            <div
-                                class="-mr-20 px-2 py-0 text-2xl transition-colors ease-linear hover:text-red-800 text-white {{ active === 'english' ? 'bg-gray-600/75' : 'bg-black' }}"
-                            >
-                                English
-                            </div>
-                        </a>
-
-                        <!-- <if condition="active === 'index'"> {{ active }} </if> -->
-                        <!-- <div class="group z-20">
-                        <input id="collapsible-interviews" class="hidden" type="checkbox" />
-                        <label
-                            for="collapsible-interviews"
-                            class="block max-h-fit cursor-pointer rounded-t-sm rounded-b-none -mx-4 px-4  text-center font-playfair-display  text-red-800 group-hover:bg-gray-400/50 z-0 {{ active.includes('intrvw_')  ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                        >
-                            Interviews
-                        </label>
                         <div
-                            class="absolute max-h-0 overflow-hidden rounded-b-md bg-slate-100 transition-[max-height] duration-300 ease-in-out hover:z-50 group-hover:max-h-screen"
+                            id="languageSwitch"
+                            class="-mr-20 px-2 cursor-pointer py-0 text-2xl transition-colors ease-linear hover:text-red-800 text-white {{ active === 'english' ? 'bg-gray-600/75' : 'bg-black' }}"
                         >
-                            <div class="rounded-b-md bg-slate-100 pt-1">
-                                <ul>
-                                    <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_dm01.html" alt="David Macou 1">
-                                            <div
-                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-400/50 {{ active === 'intrvw_dm01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                                            >
-                                                David Macou 1
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_dm02.html" alt="David Macou 2">
-                                            <div
-                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-400/50 {{ active === 'intrvw_dm02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                                            >
-                                                David Macou 2
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_ia01.html" alt="Ibraimo Alberto 1">
-                                            <div
-                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-400/50 {{ active === 'intrvw_ia01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                                            >
-                                                Ibraimo Alberto 1
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_ia02.html" alt="Ibraimo Alberto 2">
-                                            <div
-                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-400/50 {{ active === 'intrvw_ia02' ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                                            >
-                                                Ibraimo Alberto 2
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ pathPrefix }}/interviews/intrvw_ls01.html" alt="Lan und Huu Loi Bin Seifert">
-                                            <div
-                                                class="-mx-4 px-4 text-lg transition-colors ease-linear hover:bg-gray-400/50 {{ active === 'intrvw_ls01' ? 'bg-gray-600/75 text-gray-100' : '' }}"
-                                            >
-                                                Lan und Huu Loi Bin Seifert
-                                            </div>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                            English
                         </div>
-                    </div> -->
                     </div>
                 </nav>
             </div>
