Book, index & nav, hotswitching, started bios

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -66,6 +66,7 @@
 
                 <a href="{{ pathPrefix }}/project.html" alt="Project">
                     <div
+                        data-lang-key="nav-project"
                         class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                     >
                         Projekt
@@ -82,6 +83,7 @@
 
                 <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
                     <div
+                        data-lang-key="nav-exhibits"
                         class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                     >
                         Ausstellungen
@@ -90,6 +92,7 @@
 
                 <a href="{{ pathPrefix }}/book.html" alt="Book">
                     <div
+                        data-lang-key="nav-book"
                         class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                     >
                         Buch
@@ -98,6 +101,7 @@
 
                 <a href="{{ pathPrefix }}/about.html" alt="About">
                     <div
+                        data-lang-key="nav-about"
                         class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                     >
                         Über uns
@@ -121,6 +125,7 @@
 
                         <a href="{{ pathPrefix }}/project.html" alt="Project">
                             <div
+                                data-lang-key="nav-project"
                                 class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                             >
                                 Projekt
@@ -137,6 +142,7 @@
 
                         <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
                             <div
+                                data-lang-key="nav-exhibits"
                                 class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                             >
                                 Ausstellungen
@@ -145,6 +151,7 @@
 
                         <a href="{{ pathPrefix }}/book.html" alt="Book">
                             <div
+                                data-lang-key="nav-book"
                                 class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                             >
                                 Buch
@@ -153,6 +160,7 @@
 
                         <a href="{{ pathPrefix }}/about.html" alt="About">
                             <div
+                                data-lang-key="nav-about"
                                 class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
                             >
                                 Über uns
@@ -160,6 +168,7 @@
                         </a>
 
                         <div
+                            data-lang-key="nav-english"
                             id="languageSwitch"
                             class="-mr-20 px-2 cursor-pointer py-0 text-2xl transition-colors ease-linear hover:text-red-800 text-white {{ active === 'english' ? 'bg-gray-600/75' : 'bg-black' }}"
                         >
