nav split up into smaller components, click handler for mobile language switch

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -4,179 +4,12 @@
         <div class="hidden md:block md:w-[5%] lg:w-[8.33%] xl:w-[10%]"></div>
 
         <!-- "Brotherland" Text: -->
-        <div class="pointer-events-none w-full">
-            <!-- Text in Desktop Navbar: -->
-            <div class="hidden font-roboto uppercase leading-none tracking-tight text-gray-200 md:block md:text-[7rem]">Brotherland</div>
-
-            <!-- Text in Mobile Navbar: -->
-            <div class="block md:hidden">
-                <!-- Home / index.html: -->
-                <svg
-                    class="fill-[rgb(51,_51,_51)] pt-6 {{ active === '/' ? 'block' : 'hidden' }}"
-                    preserveAspectRatio="none"
-                    width="100%"
-                    height="100%"
-                    viewBox="0 0 72 38"
-                >
-                    <text x="0" y="20" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHER</text>
-                    <text x="0" y="35" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">LAND</text>
-                </svg>
-                <!-- Everywhere else: -->
-                <svg
-                    class="fill-gray-200 {{ active === '/' ? 'hidden' : 'block' }}"
-                    preserveAspectRatio="none"
-                    width="100%"
-                    height="100%"
-                    viewBox="0 0 130 20"
-                >
-                    <text x="0" y="15.5" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHERLAND</text>
-                </svg>
-            </div>
-        </div>
+        <include src="./partials/nav_logo_text.html" locals='{"active": "{{active}}"}'></include>
 
         <!-- Hamburger/Mobile Menu -->
-        <div class="absolute right-0 top-0 flex items-center justify-center aspect-square md:hidden {{ active === '/' ? 'h-14' : 'h-14' }}">
-            <input id="hamburger-menu-checkbox" type="checkbox" class="hidden" />
-            <label
-                id="hamburger-menu-label"
-                for="hamburger-menu-checkbox"
-                class="absolute right-0 top-0 z-50 aspect-square h-full cursor-pointer"
-            >
-            </label>
-
-            <div id="hamburger-menu-lines" class="z-40 flex h-full w-full flex-col justify-center px-2">
-                <div class="flex h-2/3 flex-col justify-evenly">
-                    <div class="h-[9%] rounded-sm bg-black/50"></div>
-                    <div class="h-[9%] rounded-sm bg-black/50"></div>
-                    <div class="h-[9%] rounded-sm bg-black/50"></div>
-                </div>
-            </div>
-
-            <div
-                id="hamburger-menu-panel"
-                class="fixed left-0 top-0 z-30 hidden h-full w-screen flex-col items-start justify-start bg-white py-14 pl-8 font-crimson-text text-2xl font-bold tracking-tight"
-            >
-                <a href="/" alt="Home">
-                    <div
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === '/' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Home
-                    </div>
-                </a>
-
-                <a href="{{ pathPrefix }}/project.html" alt="Project">
-                    <div
-                        data-lang-key="nav-project"
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Projekt
-                    </div>
-                </a>
-
-                <a href="{{ pathPrefix }}/interviews/intrvw_dhn01.html" alt="Interviews">
-                    <div
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active.includes('intrvw') ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Interviews
-                    </div>
-                </a>
-
-                <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
-                    <div
-                        data-lang-key="nav-exhibits"
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Ausstellungen
-                    </div>
-                </a>
-
-                <a href="{{ pathPrefix }}/book.html" alt="Book">
-                    <div
-                        data-lang-key="nav-book"
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Buch
-                    </div>
-                </a>
-
-                <a href="{{ pathPrefix }}/about.html" alt="About">
-                    <div
-                        data-lang-key="nav-about"
-                        class="px-1 my-1 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                    >
-                        Über uns
-                    </div>
-                </a>
-            </div>
-        </div>
+        <include src="./partials/nav_mobile.html" locals='{"pathPrefix": "{{pathPrefix}}", "active": "{{active}}"}'></include>
 
         <!-- Desktop Menu -->
-        <div class="absolute z-10 mt-9 hidden w-full md:block">
-            <div class="mx-auto h-fit w-full border-y border-gray-700 bg-gray-300 bg-opacity-0">
-                <nav class="pointer-events-auto m-auto sm:w-full md:w-4/5 lg:w-2/3 xl:w-3/5">
-                    <div class="flex justify-between font-crimson-text text-2xl font-bold tracking-tight">
-                        <a href="/" alt="Home">
-                            <div
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === '' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Home
-                            </div>
-                        </a>
-
-                        <a href="{{ pathPrefix }}/project.html" alt="Project">
-                            <div
-                                data-lang-key="nav-project"
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'project' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Projekt
-                            </div>
-                        </a>
-
-                        <a href="{{ pathPrefix }}/interviews/intrvw_dhn01.html" alt="Interviews">
-                            <div
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active.includes('intrvw') ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Interviews
-                            </div>
-                        </a>
-
-                        <a href="{{ pathPrefix }}/exhibits.html" alt="Exhibits">
-                            <div
-                                data-lang-key="nav-exhibits"
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'exhibits' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Ausstellungen
-                            </div>
-                        </a>
-
-                        <a href="{{ pathPrefix }}/book.html" alt="Book">
-                            <div
-                                data-lang-key="nav-book"
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'book' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Buch
-                            </div>
-                        </a>
-
-                        <a href="{{ pathPrefix }}/about.html" alt="About">
-                            <div
-                                data-lang-key="nav-about"
-                                class="px-2 transition-colors ease-linear hover:bg-gray-400/50 hover:text-red-800 {{ active === 'about' ? 'bg-gray-600/75 text-gray-100' : ' text-red-800' }}"
-                            >
-                                Über uns
-                            </div>
-                        </a>
-
-                        <div
-                            data-lang-key="nav-english"
-                            id="languageSwitch"
-                            class="-mr-20 px-2 cursor-pointer py-0 text-2xl transition-colors ease-linear hover:text-red-800 text-white {{ active === 'english' ? 'bg-gray-600/75' : 'bg-black' }}"
-                        >
-                            English
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
+        <include src="./partials/nav_desktop.html" locals='{"pathPrefix": "{{pathPrefix}}", "active": "{{active}}"}'></include>
     </div>
 </nav>
